# qrust

./: Cargo.toml  Config.toml
src/: broker.rs  data.rs  event.rs  events.rs  main.rs  signals.rs  strategy.rs  strats.rs  ta.rs
src/data/: config.rs  provider.rs  sanitizer.rs  sources.rs  store.rs  types.rs
src/event/: handler.rs  sources.rs
src/extensions/: datetime.rs
src/signals/: ema_signals.rs
