[package]
name = "qrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
csv = "1.2.1"
env_logger = "0.10.0"
log = "0.4.18"
polars = "0.30.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = "1.0.163"
toml = "0.7.4"
url = "2.3.1"
zip = "0.6.6"
