[package]
name = "qrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
chrono = "0.4.24"
csv = "1.2.1"
env_logger = "0.10.0"
log = "0.4.18"
polars = { version = "0.30.0", features = [
    "ndarray",
    "parquet",
    "cum_agg",
    "dtype-date",
    "dtype-datetime",
    "dtype-time",
    "dynamic_groupby",
    "lazy",
    "temporal",
    "rows",
    "strings",
] }
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
url = "2.3.1"
zip = "0.6.6"
